# Fun

./: CMakeLists.txt  main.cpp  map.txt
header/: app.hpp  converter.hpp  loader.hpp  rectangle.hpp  star.hpp
src/: app.cpp  converter.cpp  loader.cpp  star.cpp
